# zero2prod

./: Cargo.toml  Dockerfile  configuration.yaml  readme.md  spec.yaml  test.rest
configuration/: base.yaml  production.yaml
migrations/: 20250114035704_make_status_not_null_in_subscriptions.sql  20250114040234_create_subscription_tokens_table.sql  20250330150554_create_users_table.sql  20250408233958_seed_user.sql  20250413033954_create_idempotency_table.sql  20250413054116_relax_null_checks_on_idempotency.sql
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: home.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: dummy.rs  health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
