[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community conversion
# We could specify library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"


# Notice the double squre brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - We'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.4.1"
chrono = { version = "0.4.35", default-features = false, features = ["clock"] }
config = "0.14.0"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
uuid = { version = "1.8.0", features = ["v4"] }
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.10"
serde-aux = "4.5.0"
unicode-segmentation = "1.12.0"
claims = "0.7.1"
validator = "0.18.1"
rand = { version = "0.8.5", features = ["std_rng"] }
anyhow = "1.0.97"
surf = "2.3.2"
thiserror = "2.0.12"
base64 = "0.22.1"
sha3 = "0.10.8"

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dependencies.reqwest]
version = "0.12.8"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
anyhow = "1.0.97"
fake = "~2.3.0"
linkify = "0.10.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1.0.135"
wiremock = "0.6.2"
